--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-pandas==2.0.3
-pytest==7.4.0
-torch==2.0.1
-torchvision==0.15.2
-tqdm==4.65.0
-wandb==0.15.5
+pandas
+torch>=2.0.1
+torchvision>=0.15.2
+tqdm
+wandb
